# moleculer-web

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_gateway.py  benchmark.py  demo.py  demo_app.py  demo_phase3.py  demo_real.py  demo_real_phase3.py  demo_real_v2.py  smoke_test.py  smoke_test_real.py  smoke_test_v2.py
moleculerpy_web/: __init__.py  access.py  alias.py  cors.py  errors.py  handler.py  middleware.py  parsers.py  ratelimit.py  route.py  service.py  utils.py
tests/: conftest.py
tests/integration/: test_concurrent.py  test_gateway_e2e.py  test_phase2_e2e.py  test_phase3_e2e.py
tests/unit/: test_access.py  test_alias.py  test_cors.py  test_errors.py  test_handler.py  test_middleware.py  test_parsers.py  test_ratelimit.py  test_service.py  test_utils.py
