[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moleculerpy-web"
version = "0.1.0b1"
description = "HTTP API Gateway for MoleculerPy — maps HTTP requests to Moleculer service actions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Eli Rum", email = "explosivebit@gmail.com"}
]
maintainers = [
    {name = "MoleculerPy Team"}
]
keywords = ["moleculer", "api-gateway", "http", "microservices", "starlette", "asgi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Framework :: AsyncIO",
]

dependencies = [
    "moleculerpy>=0.14.6",
    "starlette>=0.40",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
multipart = ["python-multipart>=0.0.9"]
full = ["python-multipart>=0.0.9"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "python-multipart>=0.0.9",
]

[project.urls]
Homepage = "https://moleculerpy.services"
Documentation = "https://moleculerpy.services/docs/web"
Repository = "https://github.com/MoleculerPy/moleculer-web"
Issues = "https://github.com/MoleculerPy/moleculer-web/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["moleculerpy_web*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=moleculerpy_web",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring external services",
    "e2e: End-to-end tests with full broker cluster",
    "slow: Slow tests (>1s)",
]

[tool.coverage.run]
source = ["moleculerpy_web"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"examples/**" = ["E402", "F541"]
"tests/**" = ["B007", "B904"]
